# Snake

./: .gitignore  CMakeLists.txt  README.md
Gview/: gview.cpp  gview.h
MainAction/: CMakeLists.txt  main.cpp
Model/: model.h
Tview/: tview.cpp  tview.h
View/: view.cpp  view.h
includes/: game.h  gview.h  model.h  tview.h  view.h
sources/: game.cpp  gview.cpp  model.cpp  tview.cpp  view.cpp
